# catalyst-brain-benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVIDENCE_MAP.md  SOURCES.md
results/: README.md  bind_unbind_correctness_chained_composition.csv  deferred_outputs.csv  hdc_primitives.csv  hkvc_path_breakdown.csv  hkvc_recency_uniformity.csv  hkvc_scaling.csv  kv_cache_comparison.csv  latest.json  memory_model.csv  quantum_attention_heads.csv  rain_state_transfer.csv  token_discovery.csv  tool_selection_accuracy.csv
src/catalyst_brain_benchmarks/: __init__.py  __main__.py  benchmarks.py  charts.py  cli.py
tests/: test_benchmark_suite.py
