[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalyst-brain-benchmarks"
version = "0.4.0"
description = "Open benchmark suite for verifying Catalyst Brain SDK claims from public PyPI wheels."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Strategic Innovations AI" }]
dependencies = ["catalyst-brain==1.3.3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
catalyst-brain-bench = "catalyst_brain_benchmarks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
